# startup-pitch-deck

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agents/: financial_analyst.py  market_analyst.py  pitch_creater.py  product_manager.py
frontend/: app.py
orchestrator/: main.py
tests/: test_financial_output_schema.py  test_market_agent.py
tools/: market_tools.py
